# FileContentReader

./: Cargo.toml  README.md
IT_Innovation_Certification/: FileContentReader执行文件使用说明.docx  Windows版_用户手册.md  hello.txt  main.rs  信创麒麟系统_用户手册.md
IT_Innovation_Certification/FileContentReader_exe_document/: temp.txt
User_Manual/: API接口文档.md  user_manual_en.md  功能说明文档.md  技术文档.md  测试文档.md  用户手册.md  示例代码.md  需求文档.md
src/: lib.rs  main.rs  temp.rs
src/test_examples/: test_excel.xlsx  test_excel2.xls  test_json.json  test_rar.rar  test_tar.tar
src/test_examples/temp_test_txt/: test_csv.csv  test_excel.xlsx  test_jsonline.jsonl  test_md.md  test_ppt.pptx  test_txt.txt  test_xml.xml
src/test_files/: mod.rs  test_csv_example.rs  test_excel_example.rs  test_json_example.rs  test_md_example.rs  test_pdf_example.rs  test_ppt_example.rs  test_rar_example.rs  test_tar_example.rs  test_txt_example.rs  test_xml_example.rs  test_zip_example.rs
