[package]
name = "FileContentReader"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
failure = "0.1.8"
quick-xml = "0.27.1"
pulldown-cmark = "0.12.0"
clap = { version = "4.5.16", features = ["derive"] }
rayon = "1.10.0"
tokio = "1.39.3"
lopdf = "0.33.0"
calamine = "0.25.0"
zip = "2.1.6"
unrar = "0.5.6"
xml = "0.8.20"
chrono = "0.4"
libc = "0.2"
rar = "0.2.0"
pdf-extract = "0.6.4"
pdf = "0.8"
tempfile = "3.12.0"
encoding_rs = "0.8.34"
tar = "0.4.42"



[profile.release]
debug = true
